--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <!-- Font Awesome Icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -24,137 +25,138 @@
     <body>
         <header></header>
         <div class="front">
-             <div class="blognav"> 
-                <h2>Blog</h2>
-                <nav aria-label="breadcrumb">
+             <!-- <div class="blognav">  -->
+                
+                <!-- <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                       <li class="breadcrumb-item"><a href="#">Home</a></li>
                       <li class="breadcrumb-item active" aria-current="page">Blog</li>
-                    </ol>
+                    </ol> 
                   </nav>
-            </div>
+            </div>-->
+            <div class="blogtitle">Blogs...</div>
         </div>
     </header>
     <div class="blogrow">
        <div class="card">
-           <div class="card-image"></div>
+           <div class="card-image"><img src="https://media.self.com/photos/57d8954324fe9dae32831913/master/pass/15-Classic-Dishes_Feature.png" alt=""></div>
            <div class="card-text">
-               <span class="date">4 days ago</span>
+               <span class="date"><i class="fa fa-calendar"></i>&nbsp;21 January 2021</span>
                <h2>Post One</h2>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam fuga eaque nesciunt atque at natus. dus!</p>
            </div>
            <div class="card-stats">
                <div class="stat">
-                <div class="value">4m </div>
+                <div class="value"><i class="fa far fa-heart"></i></div>
                </div>
                <div class="stat">
-                <div class="value">4m </div>
+                <div class="value"><i class="fa fas fa-share-alt"></i></div>
                </div>
                <div class="stat">
-                <div class="value">4m </div>
+                <div class="value"><i class="fa far fa-comment"></i></div>
                </div>
 
            </div>
        </div>
        <div class="card">
-        <div class="card-image"></div>
+        <div class="card-image"><img src="https://a.cdn-hotels.com/gdcs/production149/d1480/b0946f24-cd9a-4ba7-ac7c-bef8fdb51a7a.jpg" alt=""></div>
         <div class="card-text">
-            <span class="date">4 days ago</span>
+            <span class="date"><i class="fa fa-calendar"></i>&nbsp;28 March 2021</span>
             <h2>Post One</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam fuga eaque nesciunt atque at natus. dus!</p>
         </div>
         <div class="card-stats">
             <div class="stat">
-             <div class="value">4m </div>
+             <div class="value"><i class="fa far fa-heart"></i> </div>
             </div>
             <div class="stat">
-             <div class="value">4m </div>
+             <div class="value"><i class="fa fas fa-share-alt"></i> </div>
             </div>
             <div class="stat">
-             <div class="value">4m </div>
+             <div class="value"><i class="fa fal fa-comment"></i></div>
             </div>
 
         </div>
     </div>
     <div class="card">
-        <div class="card-image"></div>
+        <div class="card-image"><img src="https://as1.ftcdn.net/jpg/01/39/61/64/500_F_139616438_zScLOyzDEuUStZMtJ8jOEHpJoPZUwR8l.jpg" alt=""></div>
         <div class="card-text">
-            <span class="date">4 days ago</span>
+            <span class="date"><i class="fa fa-calendar"></i>&nbsp;15 April 2021</span>
             <h2>Post One</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam fuga eaque nesciunt atque at natus. dus!</p>
         </div>
         <div class="card-stats">
             <div class="stat">
-             <div class="value">4m </div>
-            </div>
-            <div class="stat">
-             <div class="value">4m </div>
-            </div>
-            <div class="stat">
-             <div class="value">4m </div>
-            </div>
+                <div class="value"><i class="fa far fa-heart"></i> </div>
+               </div>
+               <div class="stat">
+                <div class="value"><i class="fa fas fa-share-alt"></i> </div>
+               </div>
+               <div class="stat">
+                <div class="value"><i class="fa fal fa-comment"></i></div>
+               </div>
 
         </div>
     </div>
     <!-- </div> -->
     <!-- <div class="blogrow"> -->
         <div class="card">
-            <div class="card-image"></div>
+            <div class="card-image"><img src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/201708/dish-story_647_081417052301.jpg" alt=""></div>
             <div class="card-text">
-                <span class="date">4 days ago</span>
+                <span class="date"><i class="fa fa-calendar"></i>&nbsp;18 April 2021</span>
                 <h2>Post One</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam fuga eaque nesciunt atque at natus. dus!</p>
             </div>
             <div class="card-stats">
                 <div class="stat">
-                 <div class="value">4m </div>
-                </div>
-                <div class="stat">
-                 <div class="value">4m </div>
-                </div>
-                <div class="stat">
-                 <div class="value">4m </div>
-                </div>
+                    <div class="value"><i class="fa far fa-heart"></i> </div>
+                   </div>
+                   <div class="stat">
+                    <div class="value"><i class="fa fas fa-share-alt"></i> </div>
+                   </div>
+                   <div class="stat">
+                    <div class="value"><i class="fa fal fa-comment"></i></div>
+                   </div>
  
             </div>
         </div>
         <div class="card">
-         <div class="card-image"></div>
+         <div class="card-image"><img src="https://www.thedailymeal.com/sites/default/files/2020/05/28/iconic_dishes_hero.jpg" alt=""></div>
          <div class="card-text">
-             <span class="date">4 days ago</span>
+             <span class="date"><i class="fa fa-calendar"></i>&nbsp;12 March 2021</span>
              <h2>Post One</h2>
              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam fuga eaque nesciunt atque at natus. dus!</p>
          </div>
          <div class="card-stats">
-             <div class="stat">
-              <div class="value">4m </div>
-             </div>
-             <div class="stat">
-              <div class="value">4m </div>
-             </div>
-             <div class="stat">
-              <div class="value">4m </div>
-             </div>
+            <div class="stat">
+                <div class="value"><i class="fa far fa-heart"></i> </div>
+               </div>
+               <div class="stat">
+                <div class="value"><i class="fa fas fa-share-alt"></i> </div>
+               </div>
+               <div class="stat">
+                <div class="value"><i class="fa fal fa-comment"></i></div>
+               </div>
  
          </div>
      </div>
      <div class="card">
-         <div class="card-image"></div>
+         <div class="card-image"><img src="https://www.deccanherald.com/sites/dh/files/article_images/2019/12/15/BIRYANI-1576399027.jpg" alt=""></div>
          <div class="card-text">
-             <span class="date">4 days ago</span>
+             <span class="date">2 May 2021</span>
              <h2>Post One</h2>
              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam fuga eaque nesciunt atque at natus. dus!</p>
          </div>
          <div class="card-stats">
-             <div class="stat">
-              <div class="value">4m </div>
-             </div>
-             <div class="stat">
-              <div class="value">4m </div>
-             </div>
-             <div class="stat">
-              <div class="value">4m </div>
-             </div>
+            <div class="stat">
+                <div class="value"><i class="fa far fa-heart"></i> </div>
+               </div>
+               <div class="stat">
+                <div class="value"><i class="fa fas fa-share-alt"></i> </div>
+               </div>
+               <div class="stat">
+                <div class="value"><i class="fa fal fa-comment"></i></div>
+               </div>
  
          </div>
      </div>
