--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
          </div>
      </div>
      </div>
+     <footer>
+       <p style="font-weight: bold;"> © Developed with&nbsp;<i style="color:#fc0505;" class="fa fa-heart"></i> by Starkx </p>
+     </footer>
          
         
         <!--[if lt IE 7]>
