--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                </div>
                <div class="col-xl-6 col-md-6 col-sm-12">
                    <div class="imgr">
-                       <div class="insta"><img src="./BewitchedForcefulDiscus-size_restricted.jpg" alt=""></div>
+                       <div class="insta">Instagram</div>
                        <div class="fb">Facebook</div>
                        <div class="twi">Twitter</div>
                        <div class="linkd">Linkedin</div>
